--- a/frontend/src/styles/components/_Form.scss
+++ b/frontend/src/styles/components/_Form.scss
@@ -10,16 +10,43 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 10px;
+  }
+
+  .consigne {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-style: italic;
+    font-size: 0.8em;
   }
 
   .form-group input {
+    text-align: center;
     width: 300px;
     height: 30px;
     border-radius: 5px;
     border: none;
     padding: 5px;
     margin-top: 10px;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .form-group select {
+    text-align: center;
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    margin-top: 10px;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   .form-group button {
@@ -37,6 +64,7 @@
     &:hover {
       background-color: $color1;
       color: $color3;
+      border: $color1;
     }
 
     &:active {
